--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <project.scm.id>uid-releases</project.scm.id>
     </properties>
+    
+    <repositories>
+        <repository>
+            <id>ua.net.uid-releases</id>
+            <url>https://git.uid.net.ua/maven/releases/</url>
+        </repository>
+        <repository>
+            <id>ua.net.uid-snapshots</id>
+            <url>https://git.uid.net.ua/maven/snapshots/</url>
+        </repository>
+    </repositories>
     
     <scm>
         <connection>scm:git:https://git.uid.net.ua/git/uid/uid.tools.git</connection>
