--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ua.net.uid</groupId>
     <artifactId>uid.tools</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <licenses>
@@ -98,7 +98,7 @@
         <connection>scm:git:https://git.uid.net.ua/git/uid/uid.tools.git</connection>
         <developerConnection>scm:git:https://git.uid.net.ua/git/uid/uid.tools.git</developerConnection>
         <url>https://git.uid.net.ua/git/uid/uid.tools.git</url>
-      <tag>1.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
     
     <distributionManagement>
