--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ua.net.uid</groupId>
     <artifactId>uid.tools</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <licenses>
@@ -114,7 +114,7 @@
         <connection>scm:git:https://git.uid.net.ua/git/uid/uid.tools.git</connection>
         <developerConnection>scm:git:https://git.uid.net.ua/git/uid/uid.tools.git</developerConnection>
         <url>https://git.uid.net.ua/git/uid/uid.tools.git</url>
-      <tag>1.0.2</tag>
+      <tag>HEAD</tag>
   </scm>
     
     <distributionManagement>
